add correct files

--- a/3-index.html
+++ b/3-index.html
@@ -142,7 +142,7 @@
             </div>
           </div>
         </section>
-
+        <!-- Our results Section -->
         <section class="section section-our-results dark">
           <div class="container">
             <div class="section-body">
@@ -181,7 +181,59 @@
               </div>
             </div>
           </div>
-        </section>      
+        </section>   
+        
+       <!-- Contact us section -->
+      <section class="section contact-me">
+        <div class="container">
+          <header class="section-header form">
+            <h2 class="section-title">Contact us</h2>
+          </header>
+          <div class="section-body contact-me">
+            <div class="contact-form">
+              <form action="#" method="POST">
+                <fieldset>
+                  <legend class="visually-hidden"></legend>
+                  <div class="form-group col-1-2">
+                    <label for="your-first-name">Name</label>
+                    <div class="form-field">
+                      <span class="form-field-container">
+                        <input type="text" name="name" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on"
+                          accesskey="n" required />
+                        <i class="form-field-icon"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="form-group col-1-2">
+                    <label for="your-last-name">Email</label>
+                    <div class="form-field">
+                      <span class="form-field-container">
+                        <input type="text" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="40"
+                          autocomplete="on" accesskey="l" required />
+                        <i class="form-field-icon"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="form-group col-2-3">
+                    <label for="your-email">Your message</label>
+                    <div class="form-field">
+                      <span class="form-field-container">
+                        <input type="email" name="your-message" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="55"
+                          autocomplete="on" accesskey="m" required />
+                        <i class="form-field-icon"></i>
+                      </span>
+                    </div>
+                  </div>
+                </fieldset>
+                <fieldset>
+                  <div class="form-group">
+                    <button class="button button-primary">CALL TO ACTION</button>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+      </section>
       </main>
     </div>
   </body>
