--- a/4-index.html
+++ b/4-index.html
@@ -28,13 +28,13 @@
           <nav class="navbar-menu">
             <ul class="nav">
               <li class="nav-item">
-                <a href="#what_we_do" class="nav-link">what we do</a>
+                <a href="#what_we_do" class="nav-link">What we do</a>
               </li>
               <li class="nav-item">
-                <a href="#our_results" class="nav-link">our results</a>
+                <a href="#our_results" class="nav-link">Our results</a>
               </li>
               <li class="nav-item">
-                <a href="contact_us" class="nav-link">contact us</a>
+                <a href="contact_us" class="nav-link">Contact us</a>
               </li>
             </ul>
           </nav>
